# gpu

./: flake.nix  popcorn-cli.nix  pyproject.toml
vectorsum_v2/: eval.py  reference.py  submission_tinygrad.py  submission_triton.py  task.py  test.py  utils.py
