[project]
name = "gpu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "tinygrad",
    "torch>=2.9.0",
    "triton>=3.5.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "W"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pyrefly]
search_path = ["*", "vectorsum_v2"]

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git" }
